src/render/snapshots/agctl__render__table__tests__all_rows.snap
---
source: src/render/table_tests.rs
assertion_line: 158
expression: rendered
---
 Account           | Org  | Plan | 5h  | Weekly | Fable (weekly) | Credits | 5h reset         | Weekly reset         | State                 
-------------------+------+------+-----+--------+----------------+---------+------------------+----------------------+-----------------------
 alice@example.com | Acme | max  | 21% | 35%    | 56%            | n/a     | 2h13m (11:13 AM) | 2d20h (Fri 05:00 AM) | ok                    
 5cdc535f          | —    | —    | —   | —      | —              | —       | —                | —                    | stale sibling of live
