src/render/snapshots/agctl__render__table__tests__by_identity_kind_column.snap
---
source: src/render/table_tests.rs
assertion_line: 487
expression: rendered
---
 Account           | Org  | Plan | Kind       | 5h  | Weekly | Fable (weekly) | Credits | 5h reset         | Weekly reset         | State 
-------------------+------+------+------------+-----+--------+----------------+---------+------------------+----------------------+-------
 alice@example.com | Acme | max  | live+owned | 21% | 35%    | 56%            | n/a     | 2h13m (11:13 AM) | 2d20h (Fri 05:00 AM) | ok    
 bob@example.com   | Acme | max  | owned      | 21% | 35%    | 56%            | n/a     | 2h13m (11:13 AM) | 2d20h (Fri 05:00 AM) | ok
