src/render/snapshots/agctl__render__table__tests__continuation_rows.snap
---
source: src/render/table_tests.rs
expression: rendered
---
 Account                        | Org  | Plan | 5h  | Weekly | Fable (weekly) | Credits | 5h reset         | Weekly reset          | State 
--------------------------------+------+------+-----+--------+----------------+---------+------------------+-----------------------+-------
 alice@example.com              | Acme | max  | 21% | 35%    | 56%            | n/a     | 11:13 AM (2h13m) | Fri 5:00 AM (2d20h)   | ok    
   ↳ monthly_foo (unknown kind) |      |      |     | 7%     |                |         |                  | Oct 1 9:00 AM (23d0h) |       
   ↳ opus (weekly)              |      |      |     | 12%    |                |         |                  | —                     |
