src/render/snapshots/agctl__render__table__tests__credits_cells.snap
---
source: src/render/table_tests.rs
assertion_line: 298
expression: rendered
---
 Account    | Org  | Plan | 5h  | Weekly | Fable (weekly) | Credits               | 5h reset         | Weekly reset         | State 
------------+------+------+-----+--------+----------------+-----------------------+------------------+----------------------+-------
 n/a        | Acme | max  | 21% | 35%    | 56%            | n/a                   | 2h13m (11:13 AM) | 2d20h (Fri 05:00 AM) | ok    
 off        | Acme | max  | 21% | 35%    | 56%            | off                   | 2h13m (11:13 AM) | 2d20h (Fri 05:00 AM) | ok    
 capped     | Acme | max  | 21% | 35%    | 56%            | $12.34 / $50.00 (25%) | 2h13m (11:13 AM) | 2d20h (Fri 05:00 AM) | ok    
 uncapped   | Acme | max  | 21% | 35%    | 56%            | $12.34 / Unlimited    | 2h13m (11:13 AM) | 2d20h (Fri 05:00 AM) | ok    
 unmeasured | Acme | max  | 21% | 35%    | 56%            | —                     | 2h13m (11:13 AM) | 2d20h (Fri 05:00 AM) | ok
