src/render/snapshots/agctl__render__table__tests__no_numbers.snap
---
source: src/render/table_tests.rs
expression: rendered
---
 Account           | Org  | Plan | 5h | Weekly | Fable (weekly) | Credits | 5h reset | Weekly reset | State           
-------------------+------+------+----+--------+----------------+---------+----------+--------------+-----------------
 alice@example.com | Acme | —    | —  | —      | —              | —       | —        | —            | keychain locked
