src/render/snapshots/agctl__render__table__tests__two_accounts.snap
---
source: src/render/table_tests.rs
expression: render(&report)
---
 Account           | Org  | Plan | 5h  | Weekly | Fable (weekly) | Credits | 5h reset         | Weekly reset        | State 
-------------------+------+------+-----+--------+----------------+---------+------------------+---------------------+-------
 alice@example.com | Acme | max  | 21% | 35%    | 56%            | n/a     | 11:13 AM (2h13m) | Fri 5:00 AM (2d20h) | ok    
 bob@example.com   | Acme | max  | 21% | 35%    | 56%            | n/a     | 11:13 AM (2h13m) | Fri 5:00 AM (2d20h) | ok
